--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,56 +3,49 @@ version: '3.8'
 services:
   mongo:
     image: mongo:6.0.14
-    restart: always
+    ports:
+      - "27017:27017"
     environment:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
     volumes:
       - mongo-data:/data/db
-      - ./mongo/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.50'
     networks:
       - mern
 
   backend:
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
+    ports:
+      - "5000:5000"
     environment:
       NODE_ENV: ${NODE_ENV}
       PORT: ${PORT}
       MONGO_URI: ${MONGO_URI}
       JWT_SECRET: ${JWT_SECRET}
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
     depends_on:
       - mongo
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.50'
     networks:
       - mern
 
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-      args:
-        VITE_API_URL:  http://localhost:5000/api #Change for your domain in production
+      dockerfile: Dockerfile.dev
     ports:
-      - "80:80"
+      - "3000:3000"
+    environment:
+      VITE_API_URL: http://localhost:5000/api
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.50'
     networks:
       - mern
 
