--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,27 +1,23 @@
-# Stage 1: Build the React app
-FROM node:20-alpine AS build
+# Stage 1: Build the frontend
+FROM node:20.12.2-alpine AS builder
 
 WORKDIR /app
-
-COPY package.json package-lock.json ./
+COPY package*.json ./
 RUN npm ci
 
 COPY . .
-
-# Build the app with env variable
-ARG VITE_REACT_APP_API_URL
-ENV VITE_REACT_APP_API_URL=$VITE_REACT_APP_API_URL
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
 RUN npm run build
 
-# Stage 2: Serve the built app with Nginx
-FROM nginx:alpine
+# Stage 2: Serve with Nginx
+FROM nginx:1.26-alpine
 
-# Copy Nginx config from frontend/nginx/default.conf
+# Copy custom nginx config
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
-# Copy the built React app
-COPY --from=build /app/dist /usr/share/nginx/html
+# Copy build from previous stage
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
-
 CMD ["nginx", "-g", "daemon off;"]
