--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,22 +1,47 @@
+upstream backend_upstream {
+  server backend:5000;  # Change if backend uses a different port
+}
+
 server {
-    listen 80;
+  listen 80 default_server;
+  listen [::]:80 default_server;
 
-    # Serve React static files
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html;
-    }
+  server_name localhost;
 
-    # Proxy API requests to the Node.js backend
-    location /api/ {
-        proxy_pass http://backend:5000; # 'backend' is the service name in docker-compose
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
+  # ==== Security Headers ====
+  server_tokens off;
+
+  add_header Strict-Transport-Security "max-age=31536000" always;
+  add_header X-XSS-Protection "1; mode=block" always;
+  add_header X-Frame-Options "SAMEORIGIN" always;
+  add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+  add_header X-Content-Type-Options "nosniff" always;
+  proxy_hide_header X-Powered-By;
+
+  # ==== Gzip Compression ====
+  gzip on;
+  gzip_proxied any;
+  gzip_comp_level 4;
+  gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+
+  # ==== Static Frontend ====
+  location / {
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html;
+  }
+
+  # ==== API Requests ====
+  location /api/ {
+    rewrite ^/api/(.*)$ /$1 break;
+    proxy_pass http://backend_upstream;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection 'upgrade';
+    proxy_set_header Host $host;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_cache_bypass $http_upgrade;
+  }
 }
