--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,18 @@ services:
       MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
       MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
       MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
+      MONGO_INITDB_USER: ${MONGO_INITDB_USER}
+      MONGO_INITDB_PWD: ${MONGO_INITDB_PWD}
     volumes:
-      - ./backend/mongo-volume:/data/db
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.50'
+      - mongo-volume:/data/db
+      - ./backend/docker-setup/mongo/db-init.js:/docker-entrypoint-initdb.d/db-init.js:ro
     networks:
       - mern
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   backend:
     build:
@@ -29,13 +32,13 @@ services:
       JWT_SECRET: ${JWT_SECRET}
     depends_on:
       - mongo
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.50'
     networks:
       - mern
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   frontend:
     build:
@@ -47,16 +50,16 @@ services:
       - "80:80"
     depends_on:
       - backend
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-          cpus: '0.50'
     networks:
       - mern
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
-  mongo-data:
+  mongo-volume:
 
 networks:
   mern:
