--- a/frontend/docker-setup/nginx/default.conf
+++ b/frontend/docker-setup/nginx/default.conf
@@ -24,6 +24,13 @@ server {
   gzip_comp_level 4;
   gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
 
+  # ==== Certbot Challenge Support ====
+  location ^~ /.well-known/acme-challenge/ {
+    default_type "text/plain";
+    root /usr/share/nginx/html;
+    allow all;
+  }
+
   # ==== Static Frontend ====
   location / {
     root /usr/share/nginx/html;
@@ -32,7 +39,7 @@ server {
   }
 
   # ==== API Requests ====
-  location /api/ {
+  location /api {
     proxy_pass http://backend_upstream;
 
     proxy_http_version 1.1;
