--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - mongo-volume:/data/db
       - ./backend/docker-setup/mongo/db-init.js:/docker-entrypoint-initdb.d/db-init.js:ro
     networks:
-      - mern
+      - default
     logging:
       driver: "json-file"
       options:
@@ -33,7 +33,8 @@ services:
     depends_on:
       - mongo
     networks:
-      - mern
+      - default
+      - frontend
     logging:
       driver: "json-file"
       options:
@@ -45,13 +46,14 @@ services:
       context: ./frontend
       dockerfile: docker-setup/Dockerfile
       args:
-        VITE_API_URL:  http://localhost/api #Change for your domain in production
+        VITE_API_URL: /api
     ports:
       - "80:80"
+      - "443:443"
     depends_on:
       - backend
     networks:
-      - mern
+      - frontend
     logging:
       driver: "json-file"
       options:
@@ -62,4 +64,7 @@ volumes:
   mongo-volume:
 
 networks:
-  mern:
+  default:
+    name: backend-mern-docker-nginx
+  frontend:
+    name: frontend-mern-docker-nginx
