--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       MONGO_INITDB_USER: ${MONGO_INITDB_USER}
       MONGO_INITDB_PWD: ${MONGO_INITDB_PWD}
     volumes:
-      - mongo-volume:/data/db
+      - ./backend/docker-setup/mongo/mongo-volume:/data/db
       - ./backend/docker-setup/mongo/db-init.js:/docker-entrypoint-initdb.d/db-init.js:ro
     networks:
       - default
@@ -60,8 +60,6 @@ services:
         max-size: "10m"
         max-file: "3"
 
-volumes:
-  mongo-volume:
 
 networks:
   default:
