--- a/frontend/docker-setup/Dockerfile
+++ b/frontend/docker-setup/Dockerfile
@@ -8,12 +8,10 @@ RUN npm ci
 
 COPY . .
 
-# Inject backend API URL (optional)
-ARG VITE_API_URL
-ENV VITE_API_URL=$VITE_API_URL
+# Copy frontend/.env.production into the container as .env
+RUN cp .env.production .env
 
 RUN npm run build
-
 
 # --- Stage 2: Nginx + Certbot Support ---
 FROM nginx:1.28.0-alpine
