--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mongo:
     image: mongo:6.0.14
@@ -18,10 +16,10 @@ services:
       dockerfile: docker-setup/Dockerfile.dev
     ports:
       - "5000:5000"
-    env_file: ./backend/.env.development
     volumes:
       - ./backend:/app
-      - /app/node_modules
+      - backend_node_modules:/app/node_modules
+      - ./backend/.env.development:/app/.env
     depends_on:
       - mongo
     networks:
@@ -36,12 +34,16 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend_node_modules:/app/node_modules
       - ./frontend/.env.development:/app/.env
     depends_on:
       - backend
     networks:
       - frontend
+
+volumes:
+  backend_node_modules:
+  frontend_node_modules:
 
 networks:
   default:
