--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 node_modules
 .env*
+logs/*
+!logs/.gitkeep
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Dev MongoDB
 backend/docker-setup/mongo/dev-volume/*
