--- a/backend/package.json
+++ b/backend/package.json
@@ -18,9 +18,11 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
+    "express-winston": "^4.2.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.15.1",
-    "morgan": "^1.10.0"
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
