--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,8 +17,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./backend:/app
-      - backend_node_modules:/app/node_modules
+      - ./backend/src:/app/src
       - ./backend/.env.development:/app/.env
     depends_on:
       - mongo
@@ -33,17 +32,14 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/app
-      - frontend_node_modules:/app/node_modules
-      - ./frontend/.env.development:/app/.env
+      - ./frontend/src:/app/src
+      - ./frontend/public:/app/public
+      - ./frontend/.env.development:/app/.env.development
     depends_on:
       - backend
     networks:
       - frontend
-
-volumes:
-  backend_node_modules:
-  frontend_node_modules:
+      
 
 networks:
   default:
