Mark v1: Add log volumes for dev and prod environments
- Added bind mount for backend logs in dev docker-compose
- Added named Docker volume for backend logs in prod
- Ensured logs/combined and logs/error folders are ignored with .gitkeep placeholders
- Updated .dockerignore to exclude log outputs while preserving folder structure
- Finalized dev and prod volume consistency

--- a/backend/.dockerignore
+++ b/backend/.dockerignore
@@ -2,3 +2,11 @@ node_modules
 npm-debug.log
 Dockerfile
 .env
+
+# Ignore all logs, but keep folder structure via .gitkeep
+logs/combined/*
+logs/error/*
+logs/*.log
+logs/*.gz
+!logs/combined/.gitkeep
+!logs/error/.gitkeep
