--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,17 @@
 node_modules
 .env*
-logs/*
-!logs/.gitkeep
 
 # Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+*.log
+*.log.gz
+*audit.json
+**/logs/combined/*
+**/logs/error/*
+!**/logs/combined/.gitkeep
+!**/logs/error/.gitkeep
 
 # Dev MongoDB
 backend/docker-setup/mongo/dev-volume/*
