--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     env_file: ./backend/.env.production
     depends_on:
       - mongo
+    volumes:
+      - backend-logs:/app/logs
     networks:
       - default
       - frontend
@@ -51,6 +53,8 @@ services:
         max-size: "10m"
         max-file: "3"
 
+volumes:
+  backend-logs:
 
 networks:
   default:
